# ai-foundations

./: .gitignore  README.md
1-introduction-to-ai/: introduction-to-ai.md
2-natural-language-processing-and-llms/: language-and-text-sequences.md
3-random-variables-and-llms/: introduction-to-llms.md  random-vaiables-and-llms.md
4-bayes-rule/: bayes-rule.md  tree-diagrams-of-sequential-events.md
mini-project/: pyproject.toml
mini-project/src/dungeon_assistant/: __init__.py  assistant.py  main.py
mini-project/src/dungeon_assistant/routes/: chat.py
mini-project/static/: index.html  script.js  styles.css
